<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="status">Status</string>
    <string name="plan_time">kor. Planzeit</string>
    <string name="execute_time">Ausführungszeit</string>
    <string name="therapy_name">Name</string>
    <string name="responsibility">Zuständig</string>
    <string name="typ">Typ</string>
    <string name="and">AND</string>
    <string name="or">OR*</string>
    <string name="pending">P</string>
    <string name="app_name">Caredroid</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="gui_login">LOGIN</string>
    <string name="copyright">© CareDroid (Version 0.1) by BMPP</string>
    <string name="checkbox_Name">Eingeloggt bleiben</string>
    <string name="button_Name">Login</string>
    <string name="patient">Patient</string>
    <string name="illness_image">Krankheitsbild</string>
    <string name="state">Status</string>
    <string name="new_Patient">+ Neu</string>
    <string name="user">Benutzername</string>
    <string name="password">Passwort</string>
    <string name="search">Suche</string>
    <string name="first_Name">Vorname:</string>
    <string name="name">Name:</string>
    <string name="insurance">Versicherung:</string>
    <string name="insurance_Number">Versicherungsnummer:</string>
    <string name="ailment">Beschwerden:</string>
    <string name="illness">Krankheitsbild:</string>
    <string name="abort">Abbrechen</string>
    <string name="create">Anlegen</string>
    <string name="insurance_example">z.B. IKK</string>
    <string name="name_example">z.B. Schmieder</string>
    <string name="first_name_example">z.B. Ralf</string>
    <string name="insurance_number_example">z.B. N-542523452-432</string>
    <string name="ailment_example">z.B. durch einen Sturz auf den Arm gefallen und seitdem starke Schmerzen am Ellenbogen am rechten Arm</string>
    <string name="illness_image_example">z.B. Armfraktur</string>

</resources>
