<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/actionbar_complete" />
    
    <RelativeLayout 
        android:layout_width="match_parent"
    	android:layout_height="match_parent" 
    	android:padding="8dp">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp" >
        
        <LinearLayout 
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="40sp" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/name_example"
                android:textSize="30sp"
                android:layout_marginBottom="20dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insurance"
                android:textSize="40sp" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/insurance_example"
                android:textSize="30sp"
                android:layout_marginBottom="20dp" />
            
        </LinearLayout>
        
        <LinearLayout 
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:orientation="vertical"
        	android:paddingLeft="90dp" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_Name"
                android:textSize="40sp" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/first_name_example"
                android:textSize="30sp"
                android:layout_marginBottom="20dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insurance_Number"
                android:textSize="40sp" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/insurance_number_example"
                android:textSize="30sp"
                android:layout_marginBottom="20dp" />
            
        </LinearLayout>
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginLeft="20dp" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ailment"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="800dp"
            android:layout_height="150dp"
            android:inputType="textMultiLine"
            android:hint="@string/ailment_example"
            android:textSize="30sp"
            android:textAlignment="textStart"
            android:layout_marginBottom="20dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/illness"
            android:textSize="40sp" />
        
        <LinearLayout 
           	android:id="@+id/linearLayout5"
           	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal" >

            <EditText
                android:id="@+id/editText6"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/illness_image_example"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/abort"
                android:textSize="25sp"
                android:layout_marginLeft="190dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create"
                android:textSize="40sp" />
            
        </LinearLayout>
        
    </LinearLayout>

    </RelativeLayout>
    
</LinearLayout>