<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/actionbar_complete" />
    
    
    <RelativeLayout 
        android:layout_width="match_parent"
    	android:layout_height="match_parent" >

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:text="@string/copyright" 
        android:textColor="@color/navyColor"
        android:textSize="20sp" />
	
	<LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

		<TextView
		    android:id="@+id/login"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:text="@string/gui_login"
		    android:textSize="70sp"
		    android:textColor="@color/navyColor"
		    android:padding="20dp" />

		<EditText
		    android:id="@+id/user"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:ems="10"
		    android:inputType="none"
		    android:textSize="30sp"
		    android:enabled="false"
		    android:hint="@string/user"
		    android:padding="20dp"
		    android:focusable="false" />

		<EditText
		    android:id="@+id/password"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:ems="10"
		    android:inputType="textPassword"
		    android:textSize="30sp"
		    android:enabled="false"
		    android:hint="@string/password"
		    android:padding="20dp"
		    android:focusable="false" />
		
		<LinearLayout 
		    android:id="@+id/linearLayout2"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal" >

			<CheckBox
			    android:id="@+id/passwordCheckbox"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:checked="true"
			    android:enabled="false"
			    android:text="@string/checkbox_Name"
			    android:textSize="20sp"
			    android:focusable="false" />
			
			<View
				android:layout_width="0dip"
				android:layout_height="0dip"
				android:layout_weight="1" />

			<Button
			    android:id="@+id/loginButton"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="10dp"
			    android:text="@string/button_Name"
			    android:textSize="30sp" />
		
		</LinearLayout>

    </LinearLayout>
    
	</RelativeLayout>

</LinearLayout>