<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
          android:id="@+id/searchBox"
          android:layout_width="100dp"
          android:layout_height="wrap_content"
          android:layout_gravity="right"
          android:layout_marginRight="40dp"
          android:layout_marginTop="10dp"
          android:hint="@string/search"
          android:enabled="false" >
    </EditText>
    
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">
        
    	<TableLayout
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:padding="40dp"
    	    android:paddingTop="0dp" >

        	<TableRow
            	android:id="@+id/header"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:paddingBottom="20dp"
            	android:layout_weight="1" >

            	<TextView
                	android:id="@+id/patient"
                	android:layout_width="0dip"
                	android:layout_height="wrap_content" 
                	android:layout_weight="0.3"
                	android:text="@string/patient"
                	android:textSize="25sp"
                	android:textStyle="bold"
                	android:background="@drawable/backgroundColor"
                	android:paddingLeft="10dp" />
            
            	<View
					android:layout_width="10dp"
					android:layout_height="0dip" />
            
            	<TextView
                	android:id="@+id/illnessImage"
                	android:layout_width="0dip"
                	android:layout_height="wrap_content"
                	android:layout_weight="0.3"
                	android:text="@string/illness_image"
                	android:textSize="25sp"
                	android:textStyle="bold"
                	android:background="@drawable/backgroundColor"
                	android:gravity="center" />
            
            	<View
					android:layout_width="10dp"
					android:layout_height="0dip" />
            
            	<TextView
                	android:id="@+id/state"
                	android:layout_width="0dip"
                	android:layout_height="wrap_content"
                	android:layout_weight="0.4"
                	android:text="@string/state"
                	android:textSize="25sp"
                	android:textStyle="bold"
                	android:background="@drawable/backgroundColor" 
                	android:gravity="right"
                	android:paddingRight="10dp" />
            
        	</TableRow>

        	<TableRow
            	android:id="@+id/row"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:paddingBottom="10dp"
            	android:layout_weight="1" >

            	<TextView
                	android:id="@+id/patientName"
                	android:layout_width="0dip"
                	android:layout_height="wrap_content"
                	android:layout_weight="0.3"
                	android:text="@string/new_Patient"
                	android:textSize="25sp"
                	android:background="@drawable/backgroundColor"
                	android:paddingLeft="10dp"
                	android:clickable="true" />
            
            	<View
					android:layout_width="10dp"
					android:layout_height="0dip" />

            	<TextView
                	android:id="@+id/illnessImageName"
                	android:layout_width="0dip"
                	android:layout_height="wrap_content"
                	android:layout_weight="0.3"
                	android:text=""
                	android:textSize="25sp"
                	android:background="@drawable/backgroundColor"
                	android:gravity="center" />
            
            	<View
					android:layout_width="10dp"
					android:layout_height="0dip" />

            	<TextView
                	android:id="@+id/stateName"
                	android:layout_width="0dip"
                	android:layout_height="wrap_content"
                	android:layout_weight="0.4"
                	android:text=""
                	android:textSize="25sp"
                	android:background="@drawable/backgroundColor" 
                	android:gravity="right"
                	android:paddingRight="10dp" />

        	</TableRow>
    	</TableLayout>
	</ScrollView>
</LinearLayout>