<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp" >

        <EditText
            android:id="@+id/status"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/status"
            android:inputType="none"
            android:textStyle="bold"
            android:background="@drawable/backgroundColor"
            android:gravity="center"
            android:layout_marginRight="5dp" />

        <EditText
            android:id="@+id/plan_time"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/plan_time"
            android:inputType="none"
            android:textStyle="bold"
            android:background="@drawable/backgroundColor"
            android:gravity="center"
            android:layout_marginRight="5dp" />

        <EditText
            android:id="@+id/execute_time"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/execute_time"
            android:inputType="none"
            android:textStyle="bold"
            android:background="@drawable/backgroundColor"
            android:gravity="center"
            android:layout_marginRight="5dp" />

        <EditText
            android:id="@+id/therapy_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/therapy_name"
            android:inputType="none"
            android:textStyle="bold"
            android:background="@drawable/backgroundColor"
            android:gravity="center"
            android:layout_marginRight="5dp" />

        <EditText
            android:id="@+id/responsibility"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/responsibility"
            android:inputType="none"
            android:textStyle="bold"
            android:background="@drawable/backgroundColor"
            android:gravity="center"
            android:layout_marginRight="5dp" />

        <EditText
            android:id="@+id/typ"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/typ"
            android:inputType="none"
            android:textStyle="bold"
            android:background="@drawable/backgroundColor"
            android:gravity="center" />
        
    </TableRow>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/and"
        android:textColor="@color/whiteColor"
        android:textStyle="bold"
        android:background="@drawable/backgroundColorNavy"
         />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/and_status"
                android:layout_width="100dp"
                android:ems="10"
                android:layout_height="wrap_content"
                android:text=""
            	android:inputType="none"
            	android:layout_marginRight="5dp" />

            <EditText
                android:id="@+id/and_plan_time"
                android:layout_width="280dp"
                android:ems="10"
                android:layout_height="wrap_content"
                android:text=""
            	android:inputType="none"
            	android:layout_marginRight="5dp" />

            <EditText
                android:id="@+id/and_execute_time"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text=""
            	android:inputType="none"
            	android:layout_marginRight="5dp" />

            <EditText
                android:id="@+id/and_therapy_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text=""
            	android:inputType="none"
            	android:layout_marginRight="5dp" />

            <EditText
                android:id="@+id/and_responsibility"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text=""
            	android:inputType="none"
            	android:layout_marginRight="5dp" />

            <EditText
                android:id="@+id/and_typ"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text=""
            	android:inputType="none" />

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/whiteColor"
        android:textStyle="bold"
        android:background="@drawable/backgroundColorNavy" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/or_status1"
                android:layout_width="100dp"
                android:ems="10"
                android:layout_height="wrap_content"
                android:text=""
            	android:inputType="none"
            	android:layout_marginRight="5dp" />

            <EditText
                android:id="@+id/or_plan_time1"
                android:layout_width="280dp"
                android:ems="10"
                android:layout_height="wrap_content"
                android:text=""
            	android:inputType="none"
            	android:layout_marginRight="5dp" />

            <EditText
                android:id="@+id/or_execute_time1"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text=""
            	android:inputType="none"
            	android:layout_marginRight="5dp" />

            <EditText
                android:id="@+id/or_therapy_name1"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text=""
            	android:inputType="none"
            	android:layout_marginRight="5dp" />

            <EditText
                android:id="@+id/or_responsibility1"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text=""
            	android:inputType="none"
            	android:layout_marginRight="5dp" />

            <EditText
                android:id="@+id/or_typ1"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text=""
            	android:inputType="none" />

        </TableRow>
    </TableLayout>

    <TableRow
        android:id="@+id/tableRow10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
        <EditText
                android:id="@+id/or_status2"
                android:layout_width="100dp"
                android:ems="10"
                android:layout_height="wrap_content"
                android:text=""
            	android:inputType="none"
            	android:layout_marginRight="5dp" />

            <EditText
                android:id="@+id/or_plan_time2"
                android:layout_width="280dp"
                android:ems="10"
                android:layout_height="wrap_content"
                android:text=""
            	android:inputType="none"
            	android:layout_marginRight="5dp" />

            <EditText
                android:id="@+id/or_execute_time2"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text=""
            	android:inputType="none"
            	android:layout_marginRight="5dp" />

            <EditText
                android:id="@+id/or_therapy_name2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text=""
            	android:inputType="none"
            	android:layout_marginRight="5dp" />

            <EditText
                android:id="@+id/or_responsibility2"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text=""
            	android:inputType="none"
            	android:layout_marginRight="5dp" />

            <EditText
                android:id="@+id/or_typ2"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text=""
            	android:inputType="none" /> 
        
    </TableRow>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/pending"
        android:textColor="@color/whiteColor"
        android:textStyle="bold"
        android:background="@drawable/backgroundColorNavy" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/tableRow11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/p_status"
                android:layout_width="100dp"
                android:ems="10"
                android:layout_height="wrap_content"
                android:text=""
            	android:inputType="none"
            	android:layout_marginRight="5dp" />

            <EditText
                android:id="@+id/p_plan_time"
                android:layout_width="280dp"
                android:ems="10"
                android:layout_height="wrap_content"
                android:text=""
            	android:inputType="none"
            	android:layout_marginRight="5dp" />

            <EditText
                android:id="@+id/p_execute_time"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text=""
            	android:inputType="none"
            	android:layout_marginRight="5dp" />

            <EditText
                android:id="@+id/p_therapy_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text=""
            	android:inputType="none"
            	android:layout_marginRight="5dp" />

            <EditText
                android:id="@+id/p_responsibilty"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text=""
            	android:inputType="none"
            	android:layout_marginRight="5dp" />

            <EditText
                android:id="@+id/p_typ"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text=""
            	android:inputType="none" />

        </TableRow>
    </TableLayout>

</LinearLayout>